--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
       ></button>
     </div>
 
-    <script src="gallery.js" type="module"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
